# bioimage-cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  MIGRATION_GUIDE.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml  wheels.yml
development/affinities/: check_compute_affinities.py  check_compute_embedding_distances.py
development/distance/: DIJKSTRA_PERFORMANCE_NOTES.md  PERFORMANCE_NOTES.md  _geodesic_reference.py  benchmark.py  benchmark_dijkstra.py  benchmark_geodesic.py  check_geodesic_distance.py  check_non_maximum_distance_suppression.py
development/filters/: PERFORMANCE_NOTES.md  _bench_utils.py  benchmark.py  check_parity.py
development/flow/: PERFORMANCE_NOTES.md  _reference_impl.py  benchmark.py  benchmark_interleave.py  benchmark_midpoint_reuse.py  check_flow_density.py  create_test_data.py
development/graph/: _grid_affinity_compatibility.py  _rag_compatibility.py  benchmark_accumulate_labels.py  benchmark_bfs.py  check_grid_affinity_edges.py  check_grid_affinity_lifted_edges.py  check_rag_2d.py  check_rag_3d.py
development/graph/agglomeration/: PERFORMANCE_NOTES.md  _compatibility.py  check_edge_weighted.py  check_gasp.py  check_mala.py  check_node_and_edge_weighted.py  diagnose.py
development/graph/lifted_multicut/: PERFORMANCE_NOTES.md  _compatibility.py  check_fusion_move.py  check_greedy_additive.py  check_kernighan_lin.py  evaluate_solvers.py  repro_lifted_edges_segfault.py
development/graph/multicut/: PERFORMANCE_NOTES.md  _compatibility.py  check_chained.py  check_decomposer.py  check_fusion_move.py  check_greedy_additive.py  check_greedy_fixation.py  check_kernighan_lin.py  evaluate_solvers.py
development/graph/mutex_watershed/: check_mutex_clustering.py  check_semantic_mutex_clustering.py
development/label_multiset/: benchmark.py
development/local_maxima/: benchmark.py
development/mesh/: PERFORMANCE_NOTES.md  _marching_cubes_reference.py  _mesh_smoothing_reference.py  benchmark_marching_cubes.py  benchmark_mesh_smoothing.py  check_marching_cubes.py  generate_marching_cubes_tables.py
development/segmentation/: PERFORMANCE_NOTES.md  _label_equivalence.py  _mutex_watershed_equivalence.py  _semantic_mws_equivalence.py  _watershed_equivalence.py  _watershed_from_affinities_equivalence.py  benchmark_mutex_watershed.py  check_label_2d.py  check_label_3d.py  check_mutex_watershed_2d.py  check_mutex_watershed_3d.py  check_relabel_sequential.py  check_semantic_mutex_watershed_2d.py  check_semantic_mutex_watershed_3d.py  check_watershed_2d.py  check_watershed_3d.py  check_watershed_from_affinities_2d.py  check_watershed_from_affinities_3d.py
development/skeleton/: PERFORMANCE_NOTES.md  benchmark_teasar.py  benchmark_teasar_dispatch.py  benchmark_teasar_mrc.py  benchmark_teasar_sequential.py  blockwise_stitching.py  compare_blockwise_kimimaro.py
development/transformation/: PERFORMANCE_NOTES.md  check_affine.py
development/utils/: benchmark_mesh_smoothing.py  benchmark_union_find.py
examples/distance/: complex-shape.tif  geodesic_2d.py  geodesic_3d.py  geodesic_mesh.py  shape.py
examples/segmentation/: _lifted_problem.py  gasp.py  lifted_multicut_from_affinities.py  multicut_from_affinities.py  mutex_watershed.py  serialize_grid_lifted_problem.py  serialize_lifted_problem.py  watershed.py
examples/skeleton/: instance_segmentation.py  teasar.py
include/bioimage_cpp/: array_view.hxx  blocking.hxx  distance_transform.hxx  mesh_smoothing.hxx  non_maximum_distance_suppression.hxx  overlap.hxx  run_length.hxx  take_dict.hxx
include/bioimage_cpp/affinities/: compute_affinities.hxx  compute_embedding_distances.hxx
include/bioimage_cpp/detail/: checked_arithmetic.hxx  edge_hash.hxx  grid.hxx  indexed_heap.hxx  label_cast.hxx  mutex_storage.hxx  profile.hxx  relabel.hxx  semantic_labels.hxx  threading.hxx  union_find.hxx
include/bioimage_cpp/distance/: geodesic_mask.hxx  (+4 more)
src/bindings/: affinities.cxx  affinities.hxx  blocking.cxx  blocking.hxx  distance.cxx  distance.hxx  filters.cxx  filters.hxx  flow.cxx  flow.hxx  graph.cxx  graph.hxx  ground_truth.cxx  ground_truth.hxx  label_multiset.cxx  label_multiset.hxx  mesh.cxx  mesh.hxx  module.cxx  ndarray.hxx  segmentation.cxx  segmentation.hxx  skeleton.cxx  skeleton.hxx  skeleton_distributed.cxx  transformation.cxx  transformation.hxx  util.cxx  util.hxx  utils.cxx  utils.hxx
src/bioimage_cpp/: __init__.py  _data.py  _validation.py  utils.py
src/cpp/: take_dict.cxx
tests/: test_blocking.py  test_filters.py  test_flow.py  test_ground_truth_overlap.py  test_segmentation_mutex_watershed.py  test_transformation.py  test_util_union_find.py  test_utils_compute_rle.py  test_utils_mesh_smoothing.py  test_utils_take_dict.py
tests/affinities/: test_compute_affinities.py  test_compute_embedding_distances.py
tests/distance/: test_distance_transform.py  test_geodesic_distance.py  test_grid_dijkstra.py  test_non_maximum_distance_suppression.py
tests/graph/: test_breadth_first_search.py  test_connected_components.py  test_distributed_rag.py  test_edge_weighted_watershed.py  test_grid_affinity_multicut_integration.py  test_grid_features.py  test_grid_graph.py  test_mutex_watershed.py  test_mutex_watershed_graph.py  test_node_label_projection.py  test_rag_accumulate_labels.py  test_rag_coordinates.py  test_rag_features.py  test_rag_lifted_features.py  test_rag_multicut_integration.py  test_region_adjacency_graph.py  test_semantic_mutex_watershed_graph.py  test_undirected_graph.py
tests/label_multiset/: test_against_nifty.py  test_downsample.py  test_merger.py  test_read_subset.py
tests/mesh/: test_marching_cubes.py  test_simplification.py  test_smoothing.py
tests/segmentation/: test_label.py  test_mutex_watershed.py  test_relabel_sequential.py  test_semantic_mutex_watershed.py  test_watershed.py  test_watershed_from_affinities.py
tests/skeleton/: test_distributed.py  test_postprocessing.py  test_skeleton_to_graph.py  test_teasar.py  test_teasar_labels.py
(+139 files in other folders)
