[build-system]
requires = ["scikit-build-core>=0.8", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "bioimage-cpp"
version = "0.1.0"
description = "Dependency-light C++ bioimage analysis algorithms with Python bindings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]
license = { text = "MIT" }
authors = [
    { name = "bioimage-cpp contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: C++",
    "Programming Language :: C++ :: 20",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
cmake.version = ">=3.21"
wheel.packages = ["src/bioimage_cpp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
