[build-system]
requires = ["scikit-build-core>=0.8", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "bioimage-cpp"
version = "0.1.0"
description = "Dependency-light C++ bioimage analysis algorithms with Python bindings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]
license = { text = "MIT" }
authors = [
    { name = "bioimage-cpp contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: C++ :: 20",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.urls]
Homepage = "https://github.com/computational-cell-analytics/bioimage-cpp"
Repository = "https://github.com/computational-cell-analytics/bioimage-cpp"
Issues = "https://github.com/computational-cell-analytics/bioimage-cpp/issues"

[project.optional-dependencies]
test = ["pytest", "pooch", "scipy"]
data = ["pooch"]

[tool.scikit-build]
cmake.version = ">=3.21"
cmake.build-type = "Release"
wheel.packages = ["src/bioimage_cpp"]
sdist.exclude = [
    "pypi-release.txt",
    "dist/",
    "wheelhouse/",
    "_skbuild/",
    "build/",
    "*.egg-info/",
    ".pytest_cache/",
    "__pycache__/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
